--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://andrewprogers.github.io/andrew-stephanie-wedding/"
+  "homepage": "https://www.andrew-stephanie.com"
 }
