--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://www.andrew-stephanie.com"
+  "homepage": "https://www.andrew-stephanie.com/andrew-stephanie-wedding"
 }
